--- a/templates/download_waveform.html
+++ b/templates/download_waveform.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="card-body">
-            <form action="downloadwaveform" method="POST">
+            <form action="{{ url_for('downloadwaveform') }}" method="POST">
               <div class="row">
                 <div class="col-4">
                   <div class="row">
