--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -15,6 +15,12 @@
             height: 400px;  /* or as desired */
             width: 100%;  /* This means "100% of the width of its container", the .col-md-8 */
           }
+    #map_diseminasi {
+      position: relative;
+      border: 1px solid black;
+      border-radius: 8px;
+      width: 100%;  /* This means "100% of the width of its container", the .col-md-8 */
+    }
   </style>
 {% endblock %}
 {% block subjudul %} SI-GEMPA V2.0 {% endblock %}
@@ -60,14 +66,16 @@
               </div>
             </div>
             <div class="card-body">
-              <div id="actions" class="col-12">
+              <div id="actions">
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-lg-4 col-md-6 ">
                     <div class="fileupload-process w-100">
                       <form action="/inputotomatis" method="POST">
                         <div class="form-group row">
-                          <label for="input" class="col-sm-4 col-form-label">Pilih Parameter :</label>
-                          <div class="col-sm-5">
+                          <div class="col-lg-4 col-md-7 col-sm-12">
+                            <label for="input" class=" form-label">Pilih Parameter :</label>
+                          </div>
+                          <div class="col-lg-4 col-md-5 col-sm-12 mb-3">
                             <select class="form-control" name="par_otomatis">
                               <option>TERNATE</option>
                               <option>MANADO</option>
@@ -77,8 +85,8 @@
                               <option>TNT-ESDX</option>
                             </select>
                           </div>
-                          <div class="col-3">
-                            <div class="btn-group float-center w-100">
+                          <div class="col-lg-4 col-md-6 col-sm-12 ">
+                            <div class="btn-group align-center">
                               <button type="submit" class="btn btn-success">
                                 <i class="fas fa-plus"></i>
                                 <span>
@@ -89,8 +97,8 @@
                           </div>
                         </div>
                         <div class="form-group row">
-                          <label for="inputEmail3" class="col-sm-4 col-form-label">Custom Map :</label>
-                          <div class="col-sm-5">
+                          <label for="inputEmail3" class="col-lg-4 col-md-7 col-form-label">Custom Map :</label>
+                          <div class="col-lg-4 col-md-5">
                             <select class="form-control" name="opsi_map">
                               <option>Regional</option>
                               <option>Lokal</option>
@@ -157,10 +165,10 @@
                       
                     </div>
                   </div>
-                  <div class="col-sm-4 align-items-start">
-                    <img style="margin-left: 25px; width: 85%;"src="{{ url_for('static', filename='peta_diseminasi.png') }}" class="img-fluid rounded " />
+                  <div class="col-lg-4 col-md-6  align-items-start">
+                    <img id="map_diseminasi" style="margin-left: 25px; width: 85%; margin-bottom: 25px;"src="{{ url_for('static', filename='peta_diseminasi.png') }}" class="img-fluid rounded " />
                   </div>
-                  <div class="col-sm-3 ">
+                  <div class="col-lg-4 col-md-12 ">
                     <div id="map"></div>
                       <!--<div class="row" data-aos="zoom-in">
                               <div class="map container-fluid mb-4" style="margin-bottom: 100px;" id="map" data-aos="fade-up">
@@ -192,7 +200,7 @@
                 <div class="card-body">
                   <form action="/inputmanual" method="POST">
                     <div class="row">
-                      <div class="col-1">
+                      <div class="col-lg-1 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">Parameter</label>
                         </div>
@@ -208,7 +216,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-1">
+                      <div class="col-lg-1 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">ID Event</label>
                         </div>
@@ -218,7 +226,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-2">
+                      <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">Date</label>
                         </div>
@@ -233,7 +241,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-2">
+                      <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">Time</label>
                         </div>
@@ -248,7 +256,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-1">
+                      <div class="col-lg-1 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">Lat</label>
                         </div>
@@ -258,7 +266,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-1">
+                      <div class="col-lg-1 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">Long</label>
                         </div>
@@ -268,7 +276,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-1">
+                      <div class="col-lg-1 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">Depth</label>
                         </div>
@@ -278,7 +286,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-1">
+                      <div class="col-lg-1 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">Mag</label>
                         </div>
@@ -288,7 +296,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-2">
+                      <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;">Info</label>
                         </div>
@@ -298,7 +306,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-2">
+                      <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="row">
                           <label class="col-12" style="text-align: center;"></label>
                           <label class="col-12" style="text-align: center;"></label>
@@ -317,7 +325,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-2">
+                      <div class="col-lg-2 col-md-3 col-sm-6">
                         <div class="row">
                           <div class="col-12 float-right">
                             <label for="Input"></label>
