--- a/templates/infog_mingguan.html
+++ b/templates/infog_mingguan.html
@@ -32,7 +32,7 @@
       <div class="container-fluid">
         
         <div class="row">
-          <div class="col-12 col-sm-6 col-md-3">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4">
             <div class="info-box">
               <span class="info-box-icon bg-info elevation-1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-activity" viewBox="0 0 16 16">
@@ -50,7 +50,7 @@
             <!-- /.info-box -->
           </div>
           <!-- /.col -->
-          <div class="col-12 col-sm-6 col-md-3">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4">
             <div class="info-box mb-3">
               <span class="info-box-icon bg-danger elevation-1">
                 <img width="90%" src="{{ url_for('static', filename='images/dirasakan.png') }}"  >
@@ -68,27 +68,29 @@
           </div>
           <!-- /.col -->
 
-          <!-- fix for small devices only -->
-          <div class="clearfix hidden-md-up"></div>
-
-          <div class="col-12 col-sm-6 col-md-3">
-            
-          </div>
-          <!-- /.col -->
-          <div class="col-12 col-sm-6 col-md-1"></div>
-          <div class="col-12 col-sm-6 col-md-2 float-right">
-            <div class="info-box mb-3">
-              
-
-              <div class="info-box-content">
-                <span class="info-box-text"><h5>Download<br>CSV</h5></span>
-                
+          
+          <!--
+           /.col -->
+          <div class="col-sm-12 col-md-12 col-lg-4">
+            <div class="row">
+              <div class="col">
+                <div class="float-right ">
+                  <div class="info-box mb-3">
+      
+                    <div class="info-box-content">
+                      <span class="info-box-text"><h5>Download<br>CSV</h5></span>
+                      
+                    </div>
+                    <a href="/export/mingguan" type="submit" class="btn btn-navbar info-box-icon bg-warning elevation-1 ml-2"><i class="fas fa-file-download"></i>
+                    </a>
+                  </div>
+                  <!-- /.info-box -->
+                </div>
               </div>
-              <a href="/export/mingguan" type="submit" class="btn btn-navbar info-box-icon bg-warning elevation-1 ml-2"><i class="fas fa-file-download"></i>
-              </a>
+              
             </div>
-            <!-- /.info-box -->
           </div>
+          
           <!-- /.col -->
         </div>
         <!-- /.row -->
@@ -110,11 +112,11 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <div class="row">
-                  <div class="col-md-7 align-items-start">
-                    <div id="map" style="width: 500px; height: 400px;"></div>
+                  <div class="col-lg-7 mb-3 align-items-start">
+                    <div id="map" style="width: 100%; height: 400px; position: relative; border-radius: 8px;"></div>
                   </div>
-                  <div class="col-md-5 align-items-start">
-                    <img style="margin-left: 0px; width: 95%; border-radius: 100px;"src="{{ url_for('static', filename='seismisitas_mingguan.jpg') }}" class="img-fluid rounded " />
+                  <div class="col-lg-5 align-items-start">
+                    <img style="margin-left: 0px; width: 95%; border-radius: 8px;"src="{{ url_for('static', filename='seismisitas_mingguan.jpg') }}" class="img-fluid rounded " />
                   </div>
                 </div>
               </div>
