--- a/templates/download_waveform.html
+++ b/templates/download_waveform.html
@@ -50,22 +50,23 @@
                     <label class="col-12" style="text-align: center;">Waktu (UTC)</label>
                   </div>
                   <div class="row">
-                    <div class="input-group date pl-0" style="width: 210px;" id="waveformdate" data-target-input="nearest">
+                    <div class="input-group date col-lg-5 col-12 pl-0"  id="waveformdate" data-target-input="nearest">
                         <input value="{{date.0}}" type="text" class="form-control datetimepicker-input" placeholder="yyyy-mm-dd" name="date1" data-target="#waveformdate"/>
                         <div class="input-group-append" data-target="#waveformdate" data-toggle="datetimepicker" >
                             <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                         </div>
                     </div>
-                    <label style="text-align: center; margin-top: 4px; margin-left: 8px;margin-right: 8px;">s/d</label>
-                    <div class="input-group date pl-0" style="width: 210px;" id="waveformdate1" data-target-input="nearest">
+                    <label style="text-align: center; margin-top: 4px; margin-left: 20px;margin-right: 20px;">s/d</label>
+                    <div class="input-group col-lg-5 col-12 date pl-0" id="waveformdate1" data-target-input="nearest">
                       <input value="{{date.1}}" type="text" class="form-control datetimepicker-input" placeholder="yyyy-mm-dd" name="date2" data-target="#waveformdate1"/>
                       <div class="input-group-append" data-target="#waveformdate1" data-toggle="datetimepicker" >
                           <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                       </div>
                     </div>
+                    
                   </div>
                   <div class="row">
-                    <div class="col-lg-4 float-right">
+                    <div class="col-lg-5 float-right">
                       <label for="Input"></label>
                       <div class="btn-group w-100">
                         <button type="submit" class="btn btn-success col start">
