--- a/templates/tabeleq.html
+++ b/templates/tabeleq.html
@@ -51,7 +51,7 @@
                 <form action="{{ url_for('filter') }}" method="POST">
                   <div class="col-lg-4">
                     <div class="form-group row">
-                      <div class="input-group col-sm-7">
+                      <div class="input-group col-sm-7 mb-2">
                         <div class="input-group-prepend">
                           <span class="input-group-text">
                             <i class="far fa-calendar-alt"></i>
