--- a/templates/infog_custom.html
+++ b/templates/infog_custom.html
@@ -116,7 +116,7 @@
                   <div id="map" style="width: 100%; height: 400px; position: relative; border-radius: 8px;"></div>
                 </div>
                 <div class="col-lg-5 align-items-start">
-                  <img style="margin-left: 0px; width: 95%; border-radius: 100px;"src="{{ url_for('static', filename='seismisitas_mingguan.jpg') }}" class="img-fluid rounded " />
+                  <img style="margin-left: 0px; width: 95%; border-radius: 100px;"src="static/{{mapfile}}" class="img-fluid rounded " />
                 </div>
               </div>
             </div>
