--- a/templates/infog_bulanan.html
+++ b/templates/infog_bulanan.html
@@ -115,7 +115,7 @@
                   <div id="map" style="width: 100%; height: 400px; position: relative; border-radius: 8px;"></div>
                 </div>
                 <div class="col-lg-5 align-items-start">
-                  <img style="margin-left: 0px; width: 95%; border-radius: 100px;"src="{{mapfile}}" class="img-fluid rounded " />
+                  <img style="margin-left: 0px; width: 95%; border-radius: 100px;"src="../{{mapfile}}" class="img-fluid rounded " />
                 </div>
               </div>
             </div>
