--- a/templates/sensor_stat.html
+++ b/templates/sensor_stat.html
@@ -45,7 +45,7 @@
               </div>
             </div>
             <div class="card-body">
-              <img style="margin-left: 0px; width: 100%; border-radius: 100px;"src="{{gambar.1}}" class="img-fluid rounded " />
+              <img style="margin-left: 0px; width: 100%; border-radius: 100px;"src="../{{gambar.1}}" class="img-fluid rounded " />
             </div>
           </div>
           <div class="card col-12">
@@ -150,7 +150,7 @@
               {% if nodata == 'nodata' %}
               <p>No data</p>
               {% else %}
-              <img style="margin-left: 0px; width: 100%; border-radius: 100px;"src="{{gambar.2}}" class="img-fluid rounded " />
+              <img style="margin-left: 0px; width: 100%; border-radius: 100px;"src="../{{gambar.2}}" class="img-fluid rounded " />
               {% endif %}
             </div>
           </div>
