--- a/templates/sensor_stat.html
+++ b/templates/sensor_stat.html
@@ -66,7 +66,7 @@
                 <tr>
                   <!-- /.<th style="width: 10px;">No</th>-->
                   <th style="width: 20px;">Station</th>
-                  <th style="width: 100px;">Last Data</th>
+                  <th style="width: 100px;">Last Data (UTC)</th>
                   <th style="width: 10px;">Delay</th>
                 </tr>
                 </thead>
