--- a/templates/infog_bulanan.html
+++ b/templates/infog_bulanan.html
@@ -80,7 +80,7 @@
                     <span class="info-box-text"><h5>Download<br>CSV</h5></span>
                     
                   </div>
-                  <a href="/export/mingguan" type="submit" class="btn btn-navbar info-box-icon bg-warning elevation-1 ml-2"><i class="fas fa-file-download"></i>
+                  <a href="/export/bulanan" type="submit" class="btn btn-navbar info-box-icon bg-warning elevation-1 ml-2"><i class="fas fa-file-download"></i>
                   </a>
                 </div>
                 <!-- /.info-box -->
