--- a/templates/infog_filter.html
+++ b/templates/infog_filter.html
@@ -224,7 +224,7 @@
                     <span class="info-box-text"><h5>Download<br>CSV</h5></span>
                     
                   </div>
-                  <a href="/export/dbfilter" type="submit" class="btn btn-navbar info-box-icon bg-warning elevation-1 ml-2"><i class="fas fa-file-download"></i>
+                  <a href="/export/dbfilter!{{date.0}}@{{date.1}}@{{date.2}}@{{date.3}}@{{date.4}}@{{date.5}}@{{date.6}}@{{date.7}}@{{date.8}}@{{date.9}}@{{date.10}}" type="submit" class="btn btn-navbar info-box-icon bg-warning elevation-1 ml-2"><i class="fas fa-file-download"></i>
                   </a>
                 </div>
                 <!-- /.info-box -->
