--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -112,7 +112,7 @@
                           <div class="form-group">
                             <br>
                             <label>Teks Infogempa :</label>
-                            <textarea class="form-control" rows="3" id="infogempa" disabled>{% print(infogb[0]) %}</textarea>
+                            <textarea class="form-control" rows="3" id="infogempa1" disabled>{% print(infogb[0]) %}</textarea>
                           </div>
                         </div>
                         <div class="col-8"></div>
@@ -427,7 +427,7 @@
 
 <script>
 function handleCopyTextFromArea() {
-const area = document.querySelector('#infogempa')
+const area = document.querySelector('#infogempa1')
 area.select();
 document.execCommand('copy')
 }
