--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -119,7 +119,7 @@
                         <div class="col-8"></div>
                         <div class="col-4">
                           <div class="btn-group float-center w-100">
-                            <button onclick="handleCopyTextFromArea()" class="btn btn-primary start swalDefaultSuccess">
+                            <button onclick="handleCopyTextFromArea()" >
                               <i class="fas fa-copy"></i>
                               <span>Copy Text</span>
                             </button>
