--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -113,13 +113,21 @@
                             <br>
                             <label>Teks Infogempa :</label>
                             <textarea class="form-control" rows="3" id="clipboard-area" disabled>{% print(infogb[0]) %}</textarea>
-                            
+                            <textarea
+                              placeholder="Write your content here and press 'Copy Text'"
+                              id="clipboard-area"
+                              cols="30"
+                              rows="2"
+                            >{% print(infogb[0]) %}</textarea>
+                            <button style="width: 260px" onclick="handleCopyTextFromArea()">
+                              Copy text
+                            </button>
                           </div>
                         </div>
                         <div class="col-8"></div>
                         <div class="col-4">
                           <div class="btn-group float-center w-100">
-                            <button onclick="handleCopyTextFromArea()" >
+                            <button onclick="handleCopyTextFromArea()" class="btn btn-primary start swalDefaultSuccess">
                               <i class="fas fa-copy"></i>
                               <span>Copy Text</span>
                             </button>
