--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -113,8 +113,8 @@
                             <br>
                             <label>Teks Infogempa :</label>
                             <textarea class="form-control" rows="3" id="clipboard-area" disabled>{% print(infogb[0]) %}</textarea>
-                            <input type="text" value="Hello World" id="myInput">
-                            <button onclick="myFunction()">Copy text</button>
+                            <input type="text" value="Hello World" id="myInput1">
+                            <button onclick="myFunction1()">Copy text</button>
                           </div>
                         </div>
                         <div class="col-8"></div>
@@ -428,9 +428,9 @@
 {% block scriptmainpage %} 
 
 <script>
-  function myFunction() {
+  function myFunction1() {
   // Get the text field
-  var copyText = document.getElementById("myInput");
+  var copyText = document.getElementById("myInput1");
 
   // Select the text field
   copyText.select();
