--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -113,7 +113,7 @@
                             <br>
                             <label>Teks Infogempa :</label>
                             <textarea class="form-control" rows="3" id="clipboard-area" disabled>{% print(infogb[0]) %}</textarea>
-                            <textarea id="content"></textarea>
+                            <textarea id="content">ini konten</textarea>
                             <button onclick="copyToClipboard()">Copy</button>
                             
                           </div>
